Version 0.1.1
------------
* Include CHANGELOG file