@@ -10,7 +10,6 @@ Backup files generated by mongodump on a S3 bucket
 """
 
 import boto
-from boto.s3.key import Key
 import ntpath
 from . import log
 from .const import (
@@ -42,6 +41,8 @@ def upload_file(file_name, **kwargs):
         raise TypeError('aws_id must be str')
     if type(aws_key) != str:
         raise TypeError('aws_access_key must be str')
+    #dry run
+    dry_run = kwargs.get('dry_run', False)
     # Check the bucket name before doing anything
     bucket_name = kwargs.get('s3_bucket', AWS_S3_DEFAULT_BUCKET_NAME)
     if type(bucket_name) != str:
@@ -62,23 +63,30 @@ def upload_file(file_name, **kwargs):
     else:
         conn = boto.connect_s3(aws_access_key_id=aws_id,
                                aws_secret_access_key=aws_key)
+    log.msg("Connected to AWS S3 service successfully!")
     # If the destination bucket does not exist, create one
     try:
         bucket = conn.get_bucket(bucket_name)
     except boto.exception.S3ResponseError:
         log.msg_warn("Bucket '{bucket_name}' does not exist!, creating it..."
                      .format(bucket_name=bucket_name))
-        bucket = conn.create_bucket(bucket_name)
-    # Create a new bucket key
-    k = Key(bucket)
+        if not dry_run:
+            bucket = conn.create_bucket(bucket_name)
+        log.msg("Created bucket '{bucket}'".format(bucket=bucket_name))
+
     # The key is the name of the file itself who needs to be stripped
     # from its full path
     key_name = ntpath.basename(file_name)
-    k.key = key_name
+
+    if not dry_run:
+        # Create a new bucket key
+        k = boto.s3.Key(bucket)
+        k.key = key_name
     # Upload the file to Amazon
     log.msg("Uploading '{key_name}' to bucket '{bucket_name}' ..."
             .format(key_name=key_name, bucket_name=bucket_name))
-    # It is import to encrypt the data on the server side
-    k.set_contents_from_filename(file_name, encrypt_key=True)
+    if not dry_run:
+        # It is important to encrypt the data on the server side
+        k.set_contents_from_filename(file_name, encrypt_key=True)
     log.msg("The file '{key_name}' has been successfully uploaded to S3!"
             .format(key_name=key_name))
